src/app/app.component.scss
* {
  font-family: 'Sora', sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  cursor: none;
  scroll-behavior: smooth;
}

html{
  scroll-behavior: smooth;
}


.cursor {
    pointer-events: none;

    &__ball {
      position: fixed;
      top: 0;
      left: 0;
      mix-blend-mode: difference;
      z-index: 1000;

      circle {
        fill: #f7f8fa;
      }
    }
  }

